Proj2/force-app/main/default/objects/Recommendation__c.object
<CustomObject>
    <fields>
        <fullName>Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Book</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Recommendations</relationshipLabel>
        <relationshipName>Recommendations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                    <default>true</default>
                    <label>3</label>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Review Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review__c</fullName>
        <label>Review</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>booknam__c</fullName>
        <formula>Book__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>booknam</label>
        <type>Text</type>
    </fields>
    <label>Recommendation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Recommendation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>